--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </form>
         </div>
 
-        <!-- Substituir o alert-box existente por: -->
+        <!-- alertbox -->
          <div class="alert-box" id="alertBox">
     <h3><i class='bx bx-notification'></i> Alertas de Validade</h3>
     <div id="alertContent"></div>
